0.0.4
-----
1. Only convert .m4a to .m4a.mp3 and vice-versa.
2. Use textarea for exclude artists and albums settings items.
3. When setting exclude artists, or albums, each should be on a new line.
4. When filtering tracks due to previous entries, use album IDs.
5. When filtering tracks due to previous entries, allow multiple tracks from
   albums where 'Album Artist' is 'Various Artists' or 'Various'
6. When excluding albums, use 'Album Artist' not 'Artist'
7. Check for duplicate tracks by normalizing names.
8. If fail to find any tracks, fall through to LastMix (if this is installed).

0.0.3
-----
1. If 'Filter Christmas' is enabled, and its December, then we still need to do
   genre filtering.
2. If 'Restrict genres' is disabled then don't do genre filtering.
3. If 'Filter Christmas' is enabled, only disable if its December.
4. If a seed track is not in a genre group, we will filter out tracks which are
   in a genre group. If this removes too many, then some of these might still be
   used. (This is then a 'soft' filter).
5. Add 10 tracks from mix to queue, and attempt to at least add 5.

0.0.2
-----
1. Disable extension conversion by default.
2. Correctly read extension conversion config item.
3. Fix not filtering by genre.

0.0.1
-----
1. Initial release.